Fixing contrast errors

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -203,7 +203,7 @@ button {
 }
 
 .logo--square {
-  background-image: url("/images/noun_Tent_2517.png");
+  background-image: url("/images/logo.png");
   background-repeat: no-repeat;
   background-size: 100%;
   font-size: var(--small-font);
@@ -874,9 +874,11 @@ button {
     border: 2px solid var(--dark-grey);
     max-width: 250px;
     align-self: center;
-    list-style: none;
     padding: 15px;
     margin-bottom: 15px;
+    ul {
+      list-style: none;
+    }
   }
 
   img {
